--- a/front/styles.css
+++ b/front/styles.css
@@ -1,14 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
-*{
+
+.navbar-light .navbar-toggler-icon{
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-light .navbar-toggler{
+    border: 1px solid white;
+}
+
+.navbar-toggler:focus{
+    box-shadow: none !important;
+}
+
+
+/* *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     background-color: #41434b;
 
-}
+} */
 
-li, a, button{
+/* li, a, button{
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -51,4 +65,4 @@ button{
 
 button:hover{
     background-color: #f9ac66;
-}
+} */
